Revision history for Perl extension HTTP::BrowserDetect.

{{$NEXT}}

3.00 2016-02-29 22:57:45 America/Toronto
    - Make "mobile" false when "tablet" is true.  This is a breaking change and
      has triggered a major version bump. (andrewmoise)

2.08 2016-01-29 21:56:29 America/Toronto
    - Brave browser detection added (Nicolas Doye)

2.07 2015-11-18 23:52:07 America/Toronto
    - Strip off anything Google Translate adds to UserAgent before parsing
      (Marco Fontani)

2.06 2015-11-15 10:59:30 America/Toronto
    - Detect more Edge versions (Marco Fontani)

2.05 2015-07-29 12:36:01 America/Toronto
    - Add Microsoft Windowns 10/Windows Phone 10 Edge Browser (Atsushi Kato)

2.04 2015-06-24 23:26:28 America/Toronto
    - Fix test failures on Perl 5.8

2.03 2015-06-19 09:59:45 America/Toronto
    - Add win8_1 method (Daniel Stadie)

2.02 2015-06-17 18:18:17 America/Toronto
    - Default to using an empty string if an undef UA is provided (ben hengst)

2.01 2015-04-24 23:05:13 America/Toronto
    - Handle "CriOS" entries correctly (andrewmoise)
    - Only detect java when no browser is detected, and make UCBrowser a
      detected browser (andrewmoise)
    - Detect "tablet" on Kindle Fire (and Chrome on Android tablets in general)
      (andrewmoise)
    - Distinguish Android tablets in device_string (andrewmoise)
    - Handle CriOS, rubylib, golib, and Dalvik (andrewmoise)
    - Detect "Mobilesafari/" as Mobile Safari (andrewmoise)
    - Detect "Windows 2000" as Win2k (andrewmoise)
    - Only detect NCR Unix on word boundary (andrewmoise)
    - Try tighter detection of robot names based on fragments (andrewmoise)
    - Fix java detection to be more strict (andrewmoise)
    - Fix up Android tablet detection (andrewmoise)
    - Add proper detection for old Windows versions in Opera (andrewmoise)
    - Add apache http client detection (andrewmoise)
    - Fix detection of SCO Unix to trigger fewer false positives (andrewmoise)