@@ -1,6 +1,14 @@
 Revision history for Perl extension HTTP::BrowserDetect.
 
 {{$NEXT}}
+    - Add browsers: Pubsub (Safari RSS reader), ADM (Android Download
+      Manager), ImageSearcherPro (iOS app) (andrewmoise)
+    - Add robots: Google favicon, malware (shellcode), phplib,
+      Verisign IPS agent, Nutch, thumbtack-thunderdome (andrewmoise)
+    - Distinguish Bingbot from MSNbot (andrewmoise)
+    - Only detect wget based on the beginning of the user-agent
+      (andrewmoise)
+    
 
 3.00 2016-02-29 22:57:45 America/Toronto
     - Make "mobile" false when "tablet" is true.  This is a breaking change and
